# Indeed

./: README.md  deploy_production.sh  install.sh  pyproject.toml  test_xml_feed.sh
.github/workflows/: ci.yml
indeed/: boot.py  hooks.py
indeed/fixtures/: custom_field.json
indeed/indeed/: api.py  bulk_operations.py  install.py  monitoring.py  utils.py
indeed/indeed/doctype/ab_test_campaign/: __init__.py  ab_test_campaign.json  ab_test_campaign.py
indeed/indeed/doctype/application_analytics/: __init__.py  application_analytics.json  application_analytics.py
indeed/indeed/doctype/bulk_job_manager/: __init__.py  bulk_job_manager.json  bulk_job_manager.py
indeed/indeed/doctype/indeed_dashboard/: __init__.py  indeed_dashboard.json  indeed_dashboard.py
indeed/indeed/doctype/indeed_integration_settings/: indeed_integration_settings.js  indeed_integration_settings.json  indeed_integration_settings.py
indeed/indeed/doctype/indeed_job_integration/: indeed_job_integration.json  indeed_job_integration.py
indeed/indeed/install/: __init__.py  after_install.py  before_install.py
indeed/indeed/setup/: custom_fields.py
indeed/indeed/workspace/indeed/: indeed.json
