[project]
name = "indeed"
authors = [
    { name = "sammish", email = "sammish.thundiyil@gmail.com"}
]
description = "ERPNext Indeed Integration - Automated job posting and application management with advanced analytics"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    # "erpnext>=15.0.0" # Required for core functionality  
    # "hrms>=1.0.0" # Required for Job Opening and Job Applicant DocTypes
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
